--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@csstools/normalize.css": "^12.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
+    "sass": "^1.75.0",
+    "typeface-montserrat": "^1.1.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -21,6 +25,7 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "postcss-normalize": "^10.0.1",
     "vite": "^5.2.0"
   }
 }
