--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://blandinem2508.github.io/Kasa/",
-  "name": "kasa-oc",
+  "homepage": "https://blandinem2508.github.io/kasa",
+  "name": "kasa",
   "private": true,
   "version": "0.0.0",
   "type": "module",
